--- a/feature/styles/global.css
+++ b/feature/styles/global.css
@@ -1,5 +1,10 @@
 @import "@radix-ui/colors/blackA.css";
 @import "@radix-ui/colors/green.css";
+@import "@radix-ui/colors/red.css";
+
+:root {
+    font-size: 1.5rem;
+}
 
 a:visited {
     color: unset;
